.data/projects/darklua-0.17.2/tests/snapshots/bundle__without_rules__bundle_without_rules_require_toml_with_object.snap
---
source: tests/bundle.rs
expression: main
---
local __DARKLUA_BUNDLE_MODULES = {
    cache = {}::any,
}

do
    do
        local function __modImpl()
            return {
                name = 'darklua',
                value = 10,
            }
        end

        function __DARKLUA_BUNDLE_MODULES.a(): typeof(__modImpl())
            local v = __DARKLUA_BUNDLE_MODULES.cache.a

            if not v then
                v = {
                    c = __modImpl(),
                }
                __DARKLUA_BUNDLE_MODULES.cache.a = v
            end

            return v.c
        end
    end
end

local value = __DARKLUA_BUNDLE_MODULES.a()
